crates/crucible-cli/src/tui/ink/tests/snapshots/crucible_cli__tui__ink__tests__chat_app_snapshot_tests__snapshot_system_message.snap
---
source: crates/crucible-cli/src/tui/ink/tests/chat_app_snapshot_tests.rs
expression: render_app(&app)
---

 * Commands: /mode, /normal, /plan, /auto, /clear, /help, /quit 

▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 >                                                                              
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 NORMAL  │ ... │ 0% ctx
